distribution/gke/ingress.tpl/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource  
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    nginx.ingress.kubernetes.io/rewrite-target: "/$1"    
spec:
  rules:
  - host: "<host-name>.<dns>"
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /smoke/?(.*)
        backend:
          service:
            name: apacheapp-svc
            port:
              number: 80
